Incluído Data Postagem.

--- a/FinalPI/Views/Publicacao/Index.cshtml
+++ b/FinalPI/Views/Publicacao/Index.cshtml
@@ -70,6 +70,8 @@
                 {
                     @Html.DisplayFor(modelItem => item.Conteudo)
                 }
+
+                @Html.DisplayFor(modelItem => item.DataPostagem)
             </div>
         </div>
     }
